# joinbench

./: .gitignore  CHANGELOG.md  DatabaseBagsTest.hs  Makefile  README.md  a-deeper-dive-into-relational-algebra-by-way-of-adjunctions.cabal  a-deeper-dive-to-relational-algebra-by-way-of-adjunctions.cabal  cabal.project.freeze  conda-env.txt  final.tex  interim.tex  joinbench.cabal  titlestructure.sty
.github/workflows/: check.yml  haskell-lint.yml  haskell.yml  release.yml  report.yml
analysis/: Pipfile  README.md  joinbench.ipynb  pyproject.toml
app/: .gitignore  AppendixExample.hs  BenchmarkUtils.hs  DatabaseBagsTest.hs  InvoiceBenchmark.hs  JoinBenchBenchmark.hs  JoinBenchWHNFBenchmark.hs  README.md  TestLazyBenchmark.hs  first-names.csv  generate_customer_database.py  generate_customer_table.py  generate_cutomer_table.py
app/databasegen/: Makefile  first-names.csv  generate_customer_database.py  surnames.csv
app/examples/: ModularIndexExample.hs  ModularProductExample.hs  NewComprehensionExample.hs  OldComprehensionExample.hs
app/tablegen/: csv_table_generator.py  record_generator.py  table_generator.py
app/tables/: c100.csv  i100.csv
data/: README.md  joinbench10.json  joinbench100.json  joinbench1000.json  joinbench10000.json  joinbench2000.json  joinbench211.json  joinbench25.json  joinbench250.json  joinbench3000.json  joinbench4000.json  joinbench50.json  joinbench500.json  joinbench5000.json  joinbench6000.json  joinbench7000.json  joinbench750.json  joinbench8000.json  joinbench9000.json  joinbenchwhnf100.json  joinbenchwhnf1000.json
data/whnf/: joinbench1000.json
database_generation/: Makefile  pyproject.toml
introduction/: introduction.tex
report/: .hunspell  Makefile  final.tex  interim.tex  packages.tex  presentation.tex
report/appendix/: appendices.tex  userguide.tex
report/background/: background.tex  benchmarking.tex  categorytheory.tex  databaserepresentation.tex  final.tex  haskellimplementation.tex  interim.tex  relationalalgebra.tex  relationalmodel.tex  utils.sty
report/bibs/: benchmarking-handbook.bib  combined.bib  instructions.txt  interim.bib
report/code/: Makefile  allcode.lhs  bagDef.tex  bagDefAndEquality.tex  commonPointedSetImplementations.tex  comprehensionEquijoin.tex  cpTypeSignature.tex  indexSchoolAndGrade.tex  indexedEquijoin.tex  indexedEquijoinTypeSignatures.tex  introFunctionTypes.tex  introRecordExample.tex  lhs2tex.tex  normalForm.tex  pointedSetDef.tex  presSchoolGradeMerge.tex  productEquijoin.tex  reduceMergedSchoolAndGrade.tex  selectTypeSignature.tex  word16Key.tex
report/conclusion/: conclusion.tex
report/ethics/: domainethics.tex  ethicalissues.tex  ethics-checklist-ug.xlsx  final.tex  interim.tex
report/evaluation/: benchmark.tex  databaseimplementation.tex  evaluation.tex  evaluationplan.tex  syntheticdatabase.tex
report/figures/: eval-method-join-evenOnePercent-and-oddOnePercent-1000.pgf  eval-method-join-evenOnePercent-and-oddOnePercent.pgf  eval-method-join-onePercent-and-fiftyPercent-1000.pgf  eval-method-join-onePercent-and-fiftyPercent.pgf  eval-method-join-onePercent-and-onePercent-1000.pgf  eval-method-join-onePercent-and-onePercent.pgf  eval-method-join-onePercent-and-twentyPercent-1000.pgf  eval-method-join-onePercent-and-twentyPercent.pgf  eval-method-join-twentyPercent-and-onePercent-1000.pgf  eval-method-join-twentyPercent-and-onePercent.pgf  indexed-equijoin-query-comparison.pgf  join-even-and-odd.pgf  join-evenOnePercent-and-oddOnePercent-1000.pgf  join-evenOnePercent-and-oddOnePercent-10000.pgf  join-evenOnePercent-and-oddOnePercent-5000.pgf  join-evenOnePercent-and-oddOnePercent-by-tuple-smallest.pgf  join-evenOnePercent-and-oddOnePercent-by-tuple-with-inset.pgf  join-evenOnePercent-and-oddOnePercent-by-tuples.pgf  join-evenOnePercent-and-oddOnePercent.pgf  join-on-onePercent.pgf  join-onePercent-and-fiftyPercent-1000.pgf  join-onePercent-and-fiftyPercent-10000.pgf  join-onePercent-and-fiftyPercent-5000.pgf  join-onePercent-and-fiftyPercent-by-tuple-smallest.pgf  join-onePercent-and-fiftyPercent-by-tuple-with-inset.pgf  join-onePercent-and-fiftyPercent-by-tuples.pgf  join-onePercent-and-fiftyPercent.pgf  join-onePercent-and-onePercent-1000.pgf  join-onePercent-and-onePercent-10000.pgf  join-onePercent-and-onePercent-5000.pgf  join-onePercent-and-onePercent-by-tuple-smallest.pgf  join-onePercent-and-onePercent-by-tuple-with-inset.pgf  join-onePercent-and-onePercent-by-tuples.pgf  join-onePercent-and-onePercent.pgf  join-onePercent-and-twentyPercent-1000.pgf  join-onePercent-and-twentyPercent-10000.pgf  join-onePercent-and-twentyPercent-5000.pgf  join-onePercent-and-twentyPercent-by-tuple-smallest.pgf  join-onePercent-and-twentyPercent-by-tuple-with-inset.pgf  join-onePercent-and-twentyPercent-by-tuples.pgf  (+31 more)
report/introduction/: final.tex  interim.tex  introduction.tex
report/project/: project.tex  projectplan.tex
report/tables/: percentage-change-of-means-join-evenOnePercent-and-oddOnePercent.tex  percentage-change-of-means-join-onePercent-and-onePercent.tex  percentage-change-of-means-join-twentyPercent-and-onePercent.tex  std-dev-comparison-join-evenOnePercent-and-oddOnePercent.tex  std-dev-comparison-join-onePercent-and-fiftyPercent.tex  std-dev-comparison-join-onePercent-and-onePercent.tex
report/title/: abstract.tex  acknowledgements.tex  title.tex
src/: Bag.hs
tables/: README.md  join_bench_table.csv  join_bench_table_10.csv  join_bench_table_100.csv  join_bench_table_1000.csv  join_bench_table_211.csv  join_bench_table_250.csv  join_bench_table_50.csv  join_bench_table_500.csv  join_bench_table_5000.csv  join_bench_table_750.csv  joinbenchtable10.csv  joinbenchtable100.csv  joinbenchtable1000.csv  joinbenchtable10000.csv  joinbenchtable2000.csv  joinbenchtable25.csv  joinbenchtable250.csv  joinbenchtable3000.csv  joinbenchtable4000.csv  joinbenchtable50.csv  joinbenchtable500.csv  joinbenchtable5000.csv  joinbenchtable6000.csv  joinbenchtable7000.csv  joinbenchtable750.csv  joinbenchtable8000.csv  joinbenchtable9000.csv
test/: BagSpec.hs
title/: title.tex
(+113 files in other folders)
