cabal-version:      2.4
name:               a-deeper-dive-into-relational-algebra-by-way-of-adjunctions
version:            0.1.0.0
synopsis:
    Benchmarking and expanding on the paper "Relational Algebra by way of Adjunctions"

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Matteo Bongiovanni
maintainer:         40599507+MatBon01@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules: Data.Bag, Data.PointedSet, Data.CMonoid, Data.Key

    -- Modules included in this library but not exported.
    -- other-modules: 

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        InstanceSigs, TypeFamilies, FlexibleContexts,
        FlexibleInstances
    build-depends:    base >=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable appendix-example
    main-is:          AppendixExample.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        base >=4.16.4.0,
        a-deeper-dive-into-relational-algebra-by-way-of-adjunctions,

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite spec
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    other-modules:      Data.BagSpec, Data.CMonoidSpec, Data.PointedSetSpec, Data.KeySpec
    build-depends:      base >=4.16.4.0, hspec ^>=2.10, a-deeper-dive-into-relational-algebra-by-way-of-adjunctions
    build-tool-depends: hspec-discover:hspec-discover == 2.*
