cabal-version:      2.4
name:               a-deeper-dive-into-relational-algebra-by-way-of-adjunctions
version:            0.1.0.0
synopsis:
    Benchmarking and expanding on the paper "Relational Algebra by way of Adjunctions"

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Matteo Bongiovanni
maintainer:         40599507+MatBon01@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules: 
        Data.Bag,
        Data.PointedSet,
        Data.Key,
        Database.Bag,
        Database.IndexedTable,
        Text.Parser.Customers,
        Text.Parser.Invoices,
        Text.Parser.JoinBenchTable

    -- Modules included in this library but not exported.
    other-modules: 
        Data.CMonoid
        Text.Parser.Utils

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        InstanceSigs, TypeFamilies, FlexibleContexts,
        FlexibleInstances, TupleSections
    build-depends:
        base >=4.16.4.0,
        array >= 0.5.4.0,
        parsec >= 0.3.1.15
    hs-source-dirs:   src
    default-language: Haskell2010

executable appendix-example
    main-is:          AppendixExample.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        base >=4.16.4.0,
        a-deeper-dive-into-relational-algebra-by-way-of-adjunctions,

    hs-source-dirs:   app
    default-language: Haskell2010

common example-properties
    build-depends:
        base >=4.16.4.0,
        a-deeper-dive-into-relational-algebra-by-way-of-adjunctions,

    default-language: Haskell2010

executable new-comprehension
    import: example-properties
    hs-source-dirs: app/examples
    main-is: NewComprehensionExample.hs

executable old-comprehension
    import: example-properties
    hs-source-dirs: app/examples
    main-is: OldComprehensionExample.hs


executable modular-product
    import: example-properties
    hs-source-dirs: app/examples
    main-is: ModularProductExample.hs

executable modular-index
    import: example-properties
    hs-source-dirs: app/examples
    main-is: ModularIndexExample.hs

common benchmark
    build-depends:
        base >=4.16.4.0,
        a-deeper-dive-into-relational-algebra-by-way-of-adjunctions,
        criterion >= 1.6.2.0,

    other-modules: BenchmarkUtils

    default-language: Haskell2010

executable invoice-benchmark
    import: benchmark
    main-is: InvoiceBenchmark.hs
    hs-source-dirs:   app

executable joinbench-benchmark
    import: benchmark
    main-is: JoinBenchBenchmark.hs
    hs-source-dirs:   app

executable lazy-benchmark
    import: benchmark
    main-is: TestLazyBenchmark.hs

    hs-source-dirs:   app

test-suite spec
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    other-modules:
        Data.BagSpec,
        Data.CMonoidSpec,
        Data.PointedSetSpec,
        Data.KeySpec,
        Database.BagSpec,
        Database.IndexedTableSpec,
        Text.Parser.CustomersSpec,
        Text.Parser.InvoicesSpec,
        Text.Parser.JoinBenchTableSpec,
        Database.BagSpecData
    build-depends:
        base >=4.16.4.0,
        hspec ^>=2.10,
        a-deeper-dive-into-relational-algebra-by-way-of-adjunctions,
        array >= 0.5.4.0,
        parsec >= 0.3.1.15
    build-tool-depends: hspec-discover:hspec-discover == 2.*
